--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,51 @@
+body {
+  background-color: rgb(240, 248, 255)
+}
+
+.app {
+  text-align: center;
+}
+
+.todo-form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 250px;
+  margin: auto;
+  justify-content: space-evenly;
+  background-color: white;
+  padding: 20px;
+  border-radius: 6px;
+  margin-bottom: 20px;
+}
+
+
 .todo-list {
   display: flex;
   flex-flow: row wrap;
   list-style-type: none;
   justify-content: space-between;
   width: 90%;
+  margin: 0 auto;
+  padding-inline-start: 0;
 }
 
 .todo-item {
   width: 200px;
   height: 150px;
-  box-shadow: 0 6px 10px -10px grey;
+  box-shadow: 0 15px 15px -10px rgb(73, 135, 189);
   text-align: center;
   border-radius: 10px;
+  background-color: aqua;
+}
+
+.delete-button {
+  background-color: hsl(0, 68%, 37%);
+  color: white;
+}
+
+.urgent-input {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
